--- a/package.json
+++ b/package.json
@@ -14,14 +14,31 @@
     "color": "^1.0.3"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.10",
     "babel-preset-latest": "^6.22.0",
     "del": "^2.2.2",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^3.0.1",
+    "webpack-stream": "^3.2.0"
   },
   "babel": {
     "presets": [
       "latest"
+    ]
+  },
+  "eslintConfig": {
+    "extends": "airbnb",
+    "env": {
+      "browser": true
+    },
+    "plugins": [
+      "import"
     ]
   }
 }
